--- a/game.html
+++ b/game.html
@@ -10,292 +10,7 @@
   </head>
 
   <body>
-    <div class="board">
-      <div class="row">
-
-        <div class="block playable" id="block-1-3">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-1 -->
-
-        <div class="block won-o" id="3-2">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-2 -->
-
-        <div class="block won-x" id="3-3">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-3 -->
-
-      </div> <!-- end row 3 -->
-
-      <div class="row">
-
-        <div class="block won-o" id="3-1">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-1 -->
-
-        <div class="block won-o" id="3-2">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-2 -->
-
-        <div class="block won-o" id="3-3">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-3 -->
-
-
-      </div>
-      <div class="row">
-
-        <div class="block won-o" id="3-1">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-1 -->
-
-        <div class="block won-o" id="3-2">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-2 -->
-
-        <div class="block won-o" id="3-3">
-
-          <div class="block-row">
-            <div class="cell marked x">
-              <i class="icon-remove"></i>
-            </div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-          <div class="block-row">
-            <div class="cell"></div>
-            <div class="cell marked o">
-              <i class="icon-circle-blank"></i>
-            </div>
-            <div class="cell"></div>
-          </div>
-
-        </div> <!-- end block 3-3 -->
-
-
-      </div> <!-- end row 2 -->
-    </div>
-
-    <hr />
+    <div id="gameStatus"> </div>
     <div class="board">
     
     </div>
