--- a/game.html
+++ b/game.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css" type="text/css" />
+    <link rel="stylesheet" href="simplegrid.css" type="text/css" />
     <link rel="stylesheet" href="game.css" type="text/css" />
 
     <title>Ultimate tic tac toe</title>
@@ -10,11 +11,7 @@
   </head>
 
   <body>
-    <div id="application">
-    
-    </div>
-    <div id="gameStatus"> </div>
-    <div class="board"> </div>
+    <div id="application" class="grid grid-pad"> </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -27,5 +24,6 @@
     <script src="templates.js" type="text/javascript" charset="utf-8"></script>
     <script src="bower_components/lodash/dist/lodash.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="game.js" type="text/javascript" charset="utf-8"></script>
+    <script src="playersList.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
