--- a/game.html
+++ b/game.html
@@ -33,7 +33,9 @@
     <script src="validatedView.js" type="text/javascript" charset="utf-8"></script>
     <script src="gameDefinition.js" type="text/javascript" charset="utf-8"></script>
     <script src="index.js" type="text/javascript" charset="utf-8"></script>
+    <script src="game.js" type="text/javascript" charset="utf-8"></script>
     <script src="multiplayer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="chatroom.js" type="text/javascript" charset="utf-8"></script>
     <script src="hotseat.js" type="text/javascript" charset="utf-8"></script>
     <script src="router.js" type="text/javascript" charset="utf-8"></script>
   </body>
