--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="scripts/views/validated.js" type="text/javascript"></script>
     <script src="scripts/views/iconSymbol.js" type="text/javascript"></script>
 
+    <script src="scripts/controllers/application.js" type="text/javascript"></script>
     <script src="scripts/controllers/index.js" type="text/javascript"></script>
     <script src="scripts/controllers/game.js" type="text/javascript"></script>
     <script src="scripts/controllers/multiplayer.js" type="text/javascript"></script>
