--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="scripts/controllers/hotseat.js" type="text/javascript"></script>
 
     <script src="scripts/routes/multiplayer.js" type="text/javascript"></script>
+    <script src="scripts/routes/hotseat.js" type="text/javascript"></script>
     <script src="scripts/router.js" type="text/javascript"></script>
 
   </body>
